[package]
name = "rathena_script_lang_interpreter"
version = "0.1.0"
edition = "2021"


[lib]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#antlr-rust = "0.2.2"
antlr-rust = { git = "https://github.com/nmeylan/antlr4rust", rev = "9649564"}
#
#[patch."https://github.com/nmeylan/antlr4rust"]
#antlr-rust = {path = "/home/nmeylan/dev/perso/antlr4rust"}