[package]
name = "rathena_script_lang_interpreter"
version = "0.1.0"
edition = "2021"


[lib]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#antlr-rust = "0.2.2"
antlr-rust = { git = "https://github.com/nmeylan/antlr4rust", rev = "7d91d3e"}
serde = {version = "1", features = ["derive", "rc"]}
bitcode = { version = "0.5.1", features = ["serde", "derive"] }
fastrand = "2.0.1"
#
#[patch."https://github.com/nmeylan/antlr4rust"]
#antlr-rust = {path = "C:\\dev\\antlr4rust"}
#antlr-rust = {path = "/home/nmeylan/dev/perso/antlr4rust"}


[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "class_vs_repl"
path = "tests/small_script_benchmark.rs"
harness = false